TEST_PROGRAMS/INVALID/evan_vassallo/incorrectProg4.min
#no semicolon after variable assignment
var x: int;

x = 5

if x then
  x = x + 1;
endif

